# fmcff

./: .gitignore  .gitmodules  README.md
code/: .clang-format  .clangd  CMakeLists.txt
code/micropython/: CMakeLists.txt  mpconfigport.h  mphalport.cpp  mphalport.h  mpy_helpers.cpp  mpy_helpers.hpp
code/micropython/modules/: micropython.cmake
code/micropython/modules/adcs/: adcsmodule.c  adcsmodule.cpp  adcsmodule.h  micropython.cmake
code/micropython/modules/gpio/: gpio.hpp  gpiomodule.c  gpiomodule.cpp  gpiomodule.h  micropython.cmake
code/samples/: CMakeLists.txt  fmcff_full.cpp  health_monitor_benchmark.cpp  health_monitor_recovery.cpp  health_monitor_recovery_timer.cpp  health_monitor_value_ranges.cpp  modules.cpp  simple_failure_no_recovery.cpp
code/src/: chunk_table.cpp  chunk_table.hpp  chunk_table.tpp  context_switch.cpp  context_switch.hpp  health_monitor.hpp  value.hpp  value_range.hpp
code/src/generic/: abort.hpp  shared.hpp
code/stm_hal/: CMakeLists.txt  cross.cmake
code/stm_hal/bitfield/: bitfield.hpp  masked_bitfield.hpp
code/stm_hal/stm/c_cxx/: cstring_min.cpp  cstring_min.hpp  cxxabi.cpp
code/stm_hal/stm/cortex_m/: cm4_fpu.cpp  cm4_fpu.hpp  irq.hpp  nvic.hpp
code/stm_hal/stm/cortex_m/register_access/: masked_register.hpp  mmio.cpp  mmio.hpp  register.hpp  reserved_bytes.hpp
code/stm_hal/stm/cortex_m/regs/: nvic_registers.hpp  scb_registers.hpp  systick_registers.hpp
code/stm_hal/stm/drivers/ina/: ina209.cpp  ina209.hpp  ina226.cpp  ina226.hpp  ina3221.cpp  ina3221.hpp
code/stm_hal/stm/linker_scripts/: STM32L432KC.ld  STM32L496ZG.ld  main.ld  peripheral_symbols_L4.ld
code/stm_hal/stm/periphs/can/: can.cpp  can.hpp  can_config.hpp  can_def.hpp  can_interrupt.hpp  can_irq_handlers.cpp  can_msg.hpp  periphs.hpp  timing_config.hpp
code/stm_hal/stm/periphs/dbgmcu/: dbgmcu.hpp
code/stm_hal/stm/periphs/flash/: flash_manager.hpp
code/stm_hal/stm/periphs/gpio/: can_pin_configs.hpp  gpio.cpp  gpio.hpp  i2c_pin_configs.hpp  pin_config.cpp  pin_config.hpp  spi_pin_configs.hpp  uart_pin_configs.hpp
code/stm_hal/stm/periphs/i2c/: i2c_config.hpp  i2c_def.hpp  i2c_master.cpp  i2c_master.hpp  i2c_timings.hpp  periphs.hpp
code/stm_hal/stm/periphs/rcc/: clock_manager.cpp  clock_manager.hpp  rcc_periph.cpp  rcc_periph.hpp  rcc_periph_list.hpp  source_enums.hpp
code/stm_hal/stm/periphs/rng/: rng.cpp  rng.hpp
code/stm_hal/stm/periphs/uart/: periphs.hpp  uart.cpp  uart.hpp  uart_config.hpp  uart_def.hpp
code/stm_hal/stm/regs/: adc_registers.hpp  can_registers.hpp  dbg_registers.hpp  dbgmcu_registers.hpp  dwt_registers.hpp  exti_registers.hpp  flash_registers.hpp  gpio_registers.hpp  i2c_registers.hpp  iwdg_registers.hpp  peripherals.hpp  pwr_registers.hpp  rcc_registers.hpp  rng_registers.hpp  rtc_registers.hpp  spi_registers.hpp  syscfg_registers.hpp  tim_registers.hpp  uart_registers.hpp  uid_registers.hpp
code/stm_hal/stm/startup/: global_timer.hpp  irq_handlers.hpp  irq_table.cpp  irq_table.hpp  startup.cpp  weak_irq_handlers.cpp
code/stm_hal/stm/support/: clock.cpp  clock.hpp  critical_section.hpp  cycle_count.cpp  cycle_count.hpp  interrupt_timer.cpp  interrupt_timer.hpp  stdout.cpp  stdout.hpp  timer.cpp  timer.hpp
code/stm_hal/targets/: README.md  targets.cmake
code/stm_hal/targets/NUCLEO_L432KC/: board_defines.hpp
code/stm_hal/targets/NUCLEO_L496ZG/: board_defines.hpp  rcc_config.hpp
code/support/: CMakeLists.txt
code/unix_shim/: CMakeLists.txt  clock.cpp  cycle_count.cpp  interrupt_timer.cpp
hil/: can_hil.py
